Encrypt heat template parameters
Encrypt hidden parameters before storing them in database
and decrypt on stack load.

Specification document https://review.openstack.org/#/c/100343/

Change-Id: Ie46c6a149f414f655600616da8deee463e55671c
Implements: blueprint encrypt-hidden-parameters

--- a/etc/heat/heat.conf.sample
+++ b/etc/heat/heat.conf.sample
@@ -74,6 +74,10 @@
 # notification module. (string value)
 #onready=<None>
 
+# Encrypt template parameters that were marked as hidden
+# before storing them in database. (boolean value)
+#encrypt_parameters=false
+
 
 #
 # Options defined in heat.common.config
